WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21560
Layering violation: String should not be responsible for creating Lengths
https://bugs.webkit.org/show_bug.cgi?id=21560
Summary
Layering violation: String should not be responsible for creating Lengths
Sam Weinig
Reported
2008-10-12 13:11:43 PDT
We should move the parsing and creating to Length.
Attachments
patch
(20.19 KB, patch)
2008-10-12 13:14 PDT
,
Sam Weinig
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sam Weinig
Comment 1
2008-10-12 13:14:59 PDT
Created
attachment 24308
[details]
patch
Darin Adler
Comment 2
2008-10-12 13:21:06 PDT
Comment on
attachment 24308
[details]
patch The return values of these functions should be auto_ptr<Length>, not Length*. r=me
Darin Adler
Comment 3
2008-10-12 13:21:45 PDT
I would use "newArray" or something along those lines rather than "create" in the names of the functions. And I was wrong, auto_ptr would be incorrect since it's delete [] rather than delete that needs to be used.
Sam Weinig
Comment 4
2008-10-12 13:43:38 PDT
Landed in
r37527
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug