WebCore/platform/text/StringImpl.h
@@ -44,7 +44,6 @@ class StringBuffer;
 
 struct CStringTranslator;
 struct HashAndCharactersTranslator;
-struct Length;
 struct StringHash;
 struct UCharBufferTranslator;
 
@@ -99,8 +98,6 @@ public:
     UChar operator[](unsigned i) { ASSERT(i < m_length); return m_data[i]; }
     UChar32 characterStartingAt(unsigned);
 
-    Length toLength();
-
     bool containsOnlyWhitespace();
 
     int toIntStrict(bool* ok = 0, int base = 10);
@@ -116,8 +113,6 @@ public:
     double toDouble(bool* ok = 0);
     float toFloat(bool* ok = 0);
 
-    Length* toCoordsArray(int& len);
-    Length* toLengthArray(int& len);
     bool isLower();
     PassRefPtr<StringImpl> lower();
     PassRefPtr<StringImpl> upper();
